3/secrets-management/vault/integration/manual-explicit-init-and-sidecar-agent-containers/podspec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vault-agent-example
  labels:
    app: vault-agent-example
spec:
  serviceAccountName: vault-auth
  volumes:
    - configMap:
        items:
          - key: vault-agent-config.hcl
            path: vault-agent-config.hcl
        name: example-vault-agent-config
      name: config
    # Is emptyDir in memory volume?
    - emptyDir: {}
      name: shared-data

  containers:
    # Sidecar container to either reauthenticate or refresh/rerender secrets every 5 minutes
    # https://www.vaultproject.io/docs/agent/template#renewals-and-updating-secrets
    - image: vault
      name: vault-agent-sidecar
      args:
        - agent
        - -config=/etc/vault/vault-agent-config.hcl
        - -log-level=debug
      volumeMounts:
        - mountPath: /etc/vault
          name: config
        - mountPath: /etc/secrets
          name: shared-data
      lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 5 && kill -SIGTERM $(pidof vault)

    # Main Application Container.
    - image: nginx
      name: nginx-container
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: shared-data
